# private

private/: Makefile  Makefile.am  Makefile.in
private/arpack/: all_arpack_sources.f
private/hsl/: frontal.f
private/user_drivers/: Makefile  Makefile.am  Makefile.in
private/user_drivers/nico_elastic_hele_shaw/: Makefile  Makefile.am  Makefile.in  README  Thele_shaw_elements.h  bifurcation_info  deflection_with_pressure.pvsm  elastic_hele_shaw_displ_flow_rate.cc  elastic_hele_shaw_displ_steady_continuation.cc  elastic_hele_shaw_displ_unsteady.cc  elastic_hele_shaw_symmetric_displ_steady_continuation.cc  hele_shaw_elements.h  hele_shaw_flux_elements.h  hele_shaw_interface_elements.h  hs_displ_fvk_elements.h  hs_fvk_elements.h  membrane_collapse.cc  post_process.bash  run_steady.bash  run_steady_restart.bash  run_steady_symmetric.bash  run_steady_symmetric_restart.bash  run_unsteady.bash  triangle_mesh.dmp
private/user_src/: Makefile  Makefile.am  Makefile.in
private/user_src/andy/: Makefile  Makefile.am  Makefile.in  Thelmholtz_elements.cc  Thelmholtz_elements.h  hello_world.cc  hello_world.h  helmholtz_elements.cc  helmholtz_elements.h  helmholtz_flux_elements.h  refineable_helmholtz_elements.cc  refineable_helmholtz_elements.h  refineable_spectral_helmholtz_elements.h  spectral_helmholtz_elements.cc  spectral_helmholtz_elements.h
private/user_src/andy/.deps/: helmholtz_elements.Plo
private/user_src/cedric/: Makefile  Makefile.am  Makefile.in  concusfinn_elements.cc  concusfinn_elements.h  concusfinn_flux_elements.cc  concusfinn_flux_elements.h  refineable_concusfinn_elements.cc  refineable_concusfinn_elements.h
private/user_src/glyn/: Makefile  Makefile.am  Makefile.in  geometric_multigrid.cc  geometric_multigrid.h
private/user_src/hartree_fock/: Makefile  Makefile.am  Makefile.in  hartree_fock_elements.cc  hartree_fock_elements.h  refineable_hartree_fock_elements.cc  refineable_hartree_fock_elements.h
private/user_src/hele_shaw_and_fvk/: Makefile  Makefile.am  Makefile.in  Thele_shaw_elements.cc  Thele_shaw_elements.h  hele_shaw_elements.cc  hele_shaw_elements.h  hele_shaw_interface_elements.h  hs_fvk_elements.h
private/user_src/jonathan/: Makefile  Makefile.am  Makefile.in  dummy.h
private/user_src/matthias/: Makefile  Makefile.am  Makefile.in  hello_world.cc  hello_world.h  matthias.h
private/user_src/multi_poisson/: Makefile  Makefile.am  Makefile.in
private/user_src/nico/: Makefile  Makefile.am  Makefile.in  constitutive_model.h  libnico.la  my_Taxisym_navier_stokes_elements.cc  my_Taxisym_navier_stokes_elements.h  my_Taxisym_navier_stokes_elements.lo  my_Tnavier_stokes_elements.cc  my_Tnavier_stokes_elements.h  my_Tnavier_stokes_elements.lo  my_axisym_navier_stokes_elements.cc  my_axisym_navier_stokes_elements.h  my_axisym_navier_stokes_elements.lo  my_navier_stokes_elements.cc  my_navier_stokes_elements.h  my_navier_stokes_elements.lo  my_refineable_axisym_navier_stokes_elements.cc  my_refineable_axisym_navier_stokes_elements.h  my_refineable_axisym_navier_stokes_elements.lo  my_refineable_navier_stokes_elements.cc  my_refineable_navier_stokes_elements.h  my_refineable_navier_stokes_elements.lo  nico.h
private/user_src/nico/.deps/: my_Taxisym_navier_stokes_elements.Plo  my_Tnavier_stokes_elements.Plo  my_axisym_navier_stokes_elements.Plo  my_navier_stokes_elements.Plo  my_refineable_axisym_navier_stokes_elements.Plo  my_refineable_navier_stokes_elements.Plo
private/user_src/nico/.libs/: libnico.lai
private/user_src/nico_elastic_hele_shaw/: Makefile  Makefile.am  Makefile.in  my_Tfoeppl_von_karman_displacement_elements.cc  my_Tfoeppl_von_karman_displacement_elements.h  my_Tfoeppl_von_karman_displacement_elements.lo  my_Tfoeppl_von_karman_elements.cc  my_Tfoeppl_von_karman_elements.h  my_Tfoeppl_von_karman_elements.lo  my_foeppl_von_karman_displacement_elements.cc  my_foeppl_von_karman_displacement_elements.h  my_foeppl_von_karman_displacement_elements.lo  my_foeppl_von_karman_elements.cc  my_foeppl_von_karman_elements.h  my_foeppl_von_karman_elements.lo  my_foeppl_von_karman_volume_constraint_element.h  nico_elastic_hele_shaw.h
private/user_src/nico_elastic_hele_shaw/.deps/: my_Tfoeppl_von_karman_displacement_elements.Plo  my_Tfoeppl_von_karman_elements.Plo  my_foeppl_von_karman_displacement_elements.Plo  my_foeppl_von_karman_elements.Plo
private/user_src/nico_elastic_hele_shaw/.libs/: libnico_elastic_hele_shaw.la  libnico_elastic_hele_shaw.lai  libnico_elastic_hele_shaw.so.0
private/user_src/num_rec/: Makefile  Makefile.am  Makefile.in  num_rec_utilities.cc  num_rec_utilities.h
private/user_src/old_meshes/: Makefile  Makefile.am  Makefile.in  combined_two_layer_spine_mesh.template.cc  combined_two_layer_spine_mesh.template.h  old_two_layer_spine_mesh.template.cc  old_two_layer_spine_mesh.template.h
private/user_src/patrick/: Makefile  Makefile.am  Makefile.in  binary_tree.cc  binary_tree.h  dummy_unsteady_heat_elements.cc  dummy_unsteady_heat_elements.h  line_mesh.cc  line_mesh.h  my_one_d_mesh.template.cc  my_one_d_mesh.template.h  refineable_line_element.cc  refineable_line_element.h  refineable_line_mesh.h
private/user_src/renaud/: Makefile  Makefile.am  Makefile.in  partitioning.cc  partitioning.h  renaud.h
private/user_src/richard/: Makefile  Makefile.in  hello_world.cc  hello_world.h
private/user_src/stefan/: Makefile  Makefile.am  Makefile.in  fisher_elements.cc  fisher_elements.h
